# const_units

./: .gitignore  Cargo.toml  README.md  build.rs  expanded.rs  generated.rs
const_units_code_gen/: Cargo.toml
const_units_code_gen/src/: expected_tests.rs  lib.rs  parsing.rs  tests.rs
const_units_code_gen/src/code_gen/: get_name_from_dimensions.rs  get_uname_from_op.rs  mod.rs  prefix.rs  quantities.rs  systems.rs  unit.rs
const_units_code_gen/src/parsing/: factor.rs  mod.rs  prefix.rs  quantity.rs  unit.rs
const_units_global_types/: Cargo.toml
const_units_global_types/src/: factor.rs  lib.rs
const_units_macros/: Cargo.toml
const_units_macros/src/: derive_adding_mul.rs  derive_div.rs  derive_mul.rs  derive_neg.rs  derive_subbing_div.rs  lib.rs
const_units_uuse/: Cargo.toml
const_units_uuse/src/: lib.rs
data/si_extended/: dimensions.toml
data/si_extended/prefixes/: binary.toml  binary.toml2  metric.toml
data/si_extended/quantities/gas_constant/: gas_constant.toml  quantity.toml
data/si_extended/quantities/length/: foot.toml  meter.toml  quantity.toml  yard.toml
data/si_extended/quantities/time/: quantity.toml  second.toml
data/si_extended/quantities/velocity/: meters_per_second.toml  quantity.toml
md_docs/: Architecture.md  MAIN.md
src/: expected_tests.rs  lib.rs  main.rs  mod.rs  parsing.rs  tests.rs  unit.rs  uuse.rs
src/code_gen/: dimension.rs  factor.rs  get_name_from_dimensions.rs  mod.rs  prefix.rs  quantities.rs  systems.rs  unit.rs
src/generated_old/: generic_units.rs
src/global_types/: factor.rs  mod.rs  prefix.rs  printing_style.rs  quantity.rs  u_name.rs  unit.rs
