[package]
name = "const_units"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.0"
num-rational = {version = "0.4.1", features = ["serde"]}
#units_macro = {path = "./units_macro"}
serde = { version = "*", features = ["derive"] }
toml = "0.7.4"
syn = {version = "*", features = ["extra-traits","derive", "full"]}
quote = "1.0"
proc-macro2 = "1.0.59"
convert_case = "0.6.0"
num-traits = "0.2.15"
itertools = "0.10.5"
parse-display = "*"
self-rust-tokenize = "*"
const_units_macros = {path = "const_units_macros"}

[lib]
proc-macro = true

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
sled = "0.34.7"
hashmap_macro = "*"

[build-dependencies]
simple-logging = "2.0.2"
log = "0.4.18"
#common_serde = {path = "common_serde"}
