[package]
name = "const_units"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md", "build.rs", "data/*"]

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = {version = "0.4.1", features = ["serde"]}
serde = { version = "*", features = ["derive"] }
toml = "0.7.4"
syn = {version = "*", features = ["extra-traits","derive", "full"]}
quote = "1.0"
proc-macro2 = "1.0.59"
# waiting for https://github.com/rutrum/convert-case/pull/14 to be merged
convert_case = {git = "https://github.com/haennes/convert-case.git", features = ["encased"]}
num-traits = "0.2.15"
itertools = "0.11.0"
parse-display = "*"
self-rust-tokenize = "*"
const_units_macros = {path = "const_units_macros"}
const_units_global_types = {path = "const_units_global_types"}
const_units_uuse = {path = "const_units_uuse"}
const_ops = "*"
const_traits = "0.3.0"
hashmap_macro = "*"
either = {version = "*", features = [ "serde"]}
getset = "*"

[dependencies.num-integer]
version = "0.1.42"
features = ["i128"]
default-features = false


[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
sled = "0.34.7"
hashmap_macro = "*"

[build-dependencies]
const_units_code_gen = {path = "const_units_code_gen"}
syn = "2.0.28"
prettyplease = "*"
#common_serde = {path = "common_serde"}
