[package]
name = "const_units_code_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
num-rational = {version = "0.4.1", features = ["serde"]}
serde = { version = "*", features = ["derive"] }
toml = "0.7.4"
syn = {version = "*", features = ["extra-traits","derive", "full"]}
quote = "1.0"
proc-macro2 = "1.0.59"
# waiting for https://github.com/rutrum/convert-case/pull/14 to be merged
convert_case = {git = "https://github.com/haennes/convert-case.git", features = ["encased"]}
num-traits = "0.2.15"
itertools = "0.11.0"
self-rust-tokenize = "*"
const_units_global_types = {path = "../const_units_global_types"}
const_traits = "0.3.0"
hashmap_macro = "*"
either = {version = "*", features = [ "serde"]}
getset = "*"

[dependencies.num-integer]
version = "0.1.42"
features = ["i128"]
default-features = false
#proc-macro = true

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
sled = "0.34.7"
hashmap_macro = "*"
