[package]
name = "const_units_global_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = {version = "0.4.1", features = ["serde"]}
serde = { version = "*", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0.59"
num-traits = "0.2.15"
self-rust-tokenize = "*"
getset = "*"
const_traits = "0.3.0"
const_ops = "0.2.0"
syn = "*"

[dependencies.num-integer]
version = "0.1.42"
features = ["i128"]
default-features = false
#proc-macro = true

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
sled = "0.34.7"
