[package]
name = "const_units_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.59"
syn = {version = "*", features = ["extra-traits","derive", "full"]}
quote = "1.0"